--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:54:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:54:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -3
 -3 thru 12</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
       <td>Matthew Fitzpatrick -1
--1 thru 10</td>
+-1 thru 11</td>
+      <td>Brooks Koepka -1
+-1 thru 11</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -172,48 +172,16 @@ body {
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Will Zalatoris -3
--3 thru 12</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-7</td>
-      <td>Will Zalatoris -3
--3 thru 12</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Joaquin Niemann -3
 -3 (F)</td>
+      <td>Rory McIlroy -1
+-1 thru 11</td>
       <td>Viktor Hovland E
 E thru 12</td>
-      <td>Rory McIlroy E
-E thru 10</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -236,19 +204,35 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
-      <td>Sungjae Im -4
--4 thru 14</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland(W) E
-E thru 12</td>
-      <td>Collin Morikawa +1
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 12</td>
+      <td>Brooks Koepka -1
+-1 thru 11</td>
+      <td>Jon Rahm +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-6</td>
+      <td>Will Zalatoris -3
+-3 thru 12</td>
+      <td>Brooks Koepka -1
+-1 thru 11</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 12</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -256,32 +240,16 @@ E thru 12</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
 -4 (F)</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Rory McIlroy E
-E thru 10</td>
+      <td>Brooks Koepka -1
+-1 thru 11</td>
+      <td>Rory McIlroy -1
+-1 thru 11</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 11</td>
       <td class="greyout">Patrick Cantlay +1
 +1 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-5</td>
-      <td>Dustin Johnson -4
--4 thru 12</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -309,26 +277,42 @@ E thru 12</td>
       <td>Xander Schauffele(W) +1
 +1 thru 11</td>
       <td>Russell Henley +1
-+1 thru 16</td>
++1 thru 17</td>
       <td class="greyout leftborder">Justin Thomas +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-1</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-4</td>
+      <td>Sungjae Im -4
+-4 thru 14</td>
+      <td>Brooks Koepka -1
+-1 thru 11</td>
+      <td>Viktor Hovland(W) E
+E thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -4
+-4 thru 12</td>
+      <td>Brooks Koepka -1
+-1 thru 11</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td>Patrick Cantlay +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth(W) +2
 +2 thru 12</td>
     </tr>
     <tr>
@@ -348,20 +332,20 @@ E thru 12</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland(W) E
-E thru 12</td>
-      <td>Jon Rahm +1
+      <td>Brooks Koepka -1
+-1 thru 11</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Jon Rahm(W) +1
 +1 thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Patrick Reed +2
-+2 thru 15</td>
-      <td class="greyout">Luke List +5
-+5 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -378,6 +362,22 @@ E thru 12</td>
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">1</td>
+      <td>Brooks Koepka -1
+-1 thru 11</td>
+      <td>Viktor Hovland(W) E
+E thru 12</td>
+      <td>Jon Rahm +1
++1 thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 15</td>
+      <td class="greyout">Luke List +5
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
