--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:56:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:56:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -287,7 +287,7 @@ E thru 12</td>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-9</td>
       <td>Dustin Johnson(W) -4
--4 thru 12</td>
+-4 thru 13</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Corey Conners -2
@@ -335,7 +335,7 @@ E thru 12</td>
       <td class="bigbold">CRED</td>
       <td class="bigbold">-7</td>
       <td>Dustin Johnson -4
--4 thru 12</td>
+-4 thru 13</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Brooks Koepka(W) -1
@@ -639,7 +639,7 @@ E thru 15</td>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson(W) -4
--4 thru 12</td>
+-4 thru 13</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Matthew Fitzpatrick -1
@@ -687,7 +687,7 @@ E thru 12</td>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson -4
--4 thru 12</td>
+-4 thru 13</td>
       <td>Rory McIlroy(W) -1
 -1 thru 11</td>
       <td>Viktor Hovland E
@@ -735,7 +735,7 @@ E thru 12</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson -4
--4 thru 12</td>
+-4 thru 13</td>
       <td>Brooks Koepka -1
 -1 thru 11</td>
       <td>Viktor Hovland E
@@ -1030,10 +1030,10 @@ E thru 12</td>
 +1 thru 13</td>
       <td>Jon Rahm +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Patrick Reed +2
-+2 thru 15</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 12</td>
+      <td class="greyout">Patrick Reed +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
