--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:04:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:04:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,22 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Will Zalatoris -3
--3 thru 12</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 11</td>
-      <td>Brooks Koepka -1
--1 thru 11</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-8</td>
@@ -188,6 +172,22 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Will Zalatoris -3
+-3 thru 12</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 11</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -205,13 +205,13 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -3
 -3 (F)</td>
       <td>Will Zalatoris -3
 -3 thru 12</td>
-      <td>Brooks Koepka -1
--1 thru 11</td>
+      <td>Brooks Koepka E
+E thru 12</td>
       <td>Jon Rahm +1
 +1 thru 12</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -221,51 +221,19 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Will Zalatoris -3
 -3 thru 12</td>
-      <td>Brooks Koepka -1
--1 thru 11</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Daniel Berger -1
 -1 (F)</td>
+      <td>Brooks Koepka E
+E thru 12</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
-      <td>Sungjae Im -5
--5 thru 15</td>
-      <td>Brooks Koepka -1
--1 thru 11</td>
-      <td>Viktor Hovland(W) E
-E thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 13</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Brooks Koepka -1
--1 thru 11</td>
-      <td>Rory McIlroy -1
--1 thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 13</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -300,13 +268,45 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-4</td>
+      <td>Sungjae Im -5
+-5 thru 15</td>
+      <td>Viktor Hovland(W) E
+E thru 12</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 12</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Rory McIlroy -1
+-1 thru 12</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 12</td>
+      <td class="greyout">Patrick Cantlay +1
++1 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-3</td>
       <td>Dustin Johnson -4
 -4 thru 13</td>
-      <td>Brooks Koepka -1
--1 thru 11</td>
       <td>Viktor Hovland E
+E thru 12</td>
+      <td>Brooks Koepka E
 E thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
@@ -332,22 +332,6 @@ E thru 12</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Brooks Koepka -1
--1 thru 11</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 13</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">1</td>
       <td>Corey Conners -2
@@ -364,11 +348,27 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">1</td>
-      <td>Brooks Koepka -1
--1 thru 11</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Jon Rahm(W) +1
++1 thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">2</td>
       <td>Viktor Hovland(W) E
+E thru 12</td>
+      <td>Brooks Koepka E
 E thru 12</td>
       <td>Jon Rahm +1
 +1 thru 12</td>
