--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:07:01 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:07:44 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,10 +198,10 @@ E (F)</td>
 -2 thru 17</td>
       <td>Webb Simpson -1
 -1 thru 15</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 12</td>
+      <td class="greyout">Jon Rahm(W) +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -214,10 +214,10 @@ E (F)</td>
 -2 thru 17</td>
       <td>Viktor Hovland E
 E thru 12</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
+      <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 12</td>
+      <td class="greyout">Jon Rahm(W) +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -230,8 +230,8 @@ E thru 12</td>
 -2 thru 17</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
@@ -324,10 +324,10 @@ E thru 12</td>
 -3 thru 13</td>
       <td>Corey Conners -2
 -2 thru 17</td>
-      <td>Jon Rahm +1
+      <td>Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
@@ -388,12 +388,12 @@ E thru 12</td>
 -2 thru 17</td>
       <td>Tiger Woods -1
 -1 (F)</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Sam Burns +1
+      <td>Sam Burns +1
 +1 thru 14</td>
-      <td class="greyout">Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
+      <td class="greyout">Jon Rahm(W) +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -420,12 +420,12 @@ E thru 12</td>
 -3 (F)</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Sam Burns +1
+      <td>Sam Burns +1
 +1 thru 14</td>
-      <td class="greyout">Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
+      <td class="greyout">Jon Rahm(W) +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -486,8 +486,8 @@ E thru 12</td>
 -1 thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -504,8 +504,8 @@ E thru 12</td>
 E (F)</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 12</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -520,8 +520,8 @@ E (F)</td>
 E thru 12</td>
       <td class="greyout leftborder">Hideki Matsuyama E
 E (F)</td>
-      <td class="greyout">Jon Rahm(W) +1
-+1 thru 12</td>
+      <td class="greyout">Jon Rahm(W) +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -584,8 +584,8 @@ E thru 12</td>
 +1 thru 12</td>
       <td class="greyout leftborder">Robert MacIntyre +1
 +1 (F)</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 12</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -613,9 +613,9 @@ E (F)</td>
       <td>Viktor Hovland E
 E thru 12</td>
       <td>Bubba Watson E
-E thru 15</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
-+1 thru 12</td>
+E thru 16</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
@@ -662,8 +662,8 @@ E thru 12</td>
 E thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
@@ -680,8 +680,8 @@ E thru 12</td>
 +1 thru 12</td>
       <td class="greyout leftborder">Sam Burns +1
 +1 thru 14</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 12</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -694,10 +694,10 @@ E thru 12</td>
 E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 12</td>
+      <td class="greyout">Jon Rahm(W) +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -790,10 +790,10 @@ E thru 12</td>
 E thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth(W) +2
+      <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 12</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -804,28 +804,12 @@ E thru 12</td>
 E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Jon Rahm(W) +1
+      <td>Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">-2</td>
-      <td>Will Zalatoris -3
--3 thru 13</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 12</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -838,26 +822,10 @@ E thru 12</td>
 +1 thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">-1</td>
-      <td>Will Zalatoris -3
--3 thru 13</td>
-      <td>Viktor Hovland E
-E thru 12</td>
-      <td>Sam Burns +1
-+1 thru 14</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -886,8 +854,8 @@ E thru 12</td>
 +1 (F)</td>
       <td>Collin Morikawa +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
@@ -908,16 +876,16 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">-1</td>
-      <td>Corey Conners -2
--2 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 12</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
-      <td>Xander Schauffele +1
-+1 thru 12</td>
+      <td>Will Zalatoris -3
+-3 thru 13</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Jon Rahm(W) +2
++2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 12</td>
       <td class="greyout">Justin Thomas +4
@@ -934,10 +902,42 @@ E thru 12</td>
 +1 thru 14</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth(W) +2
+      <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 12</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">0</td>
+      <td>Will Zalatoris -3
+-3 thru 13</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td>Sam Burns +1
++1 thru 14</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 12</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -2
+-2 thru 17</td>
+      <td>Rory McIlroy -1
+-1 thru 12</td>
+      <td>Xander Schauffele +1
++1 thru 12</td>
+      <td>Jon Rahm(W) +2
++2 thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 12</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -948,10 +948,10 @@ E thru 12</td>
 E thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td>Jon Rahm +1
+      <td>Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -964,10 +964,10 @@ E thru 12</td>
 E thru 12</td>
       <td>Patrick Cantlay(W) +1
 +1 thru 12</td>
-      <td>Jon Rahm +1
+      <td>Xander Schauffele +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -978,26 +978,26 @@ E thru 12</td>
 -1 (F)</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Collin Morikawa +1
+      <td>Collin Morikawa +1
 +1 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Viktor Hovland E
 E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 12</td>
+      <td>Jon Rahm(W) +2
++2 thru 13</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 +4 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -1005,67 +1005,19 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Viktor Hovland E
 E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 12</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
-      <td>Viktor Hovland(W) E
-E thru 12</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 13</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 12</td>
-      <td class="greyout">Patrick Reed +3
-+3 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">2</td>
-      <td>Brooks Koepka E
-E thru 12</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 12</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">3</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 13</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 12</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -1084,14 +1036,62 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">3</td>
+      <td>Viktor Hovland(W) E
+E thru 12</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 13</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 12</td>
+      <td class="greyout">Patrick Reed +3
++3 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">3</td>
+      <td>Brooks Koepka E
+E thru 12</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Patrick Cantlay +1
++1 thru 12</td>
+      <td>Jon Rahm(W) +2
++2 thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 12</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">4</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Collin Morikawa(W) +1
++1 thru 13</td>
+      <td>Patrick Cantlay +1
++1 thru 12</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 12</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">5</td>
       <td>Viktor Hovland E
 E thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 12</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
       <td>Jordan Spieth +2
 +2 thru 12</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
