--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:07:01 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:07:44 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -212,10 +212,10 @@ E thru 12</td>
 -3 thru 13</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 +1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
@@ -310,10 +310,10 @@ E thru 12</td>
 E thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth(W) +2
+      <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 12</td>
+      <td class="greyout">Jon Rahm +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -324,10 +324,10 @@ E thru 12</td>
 -1 (F)</td>
       <td>Collin Morikawa +1
 +1 thru 13</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
+      <td>Robert MacIntyre +1
 +1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
@@ -336,14 +336,14 @@ E thru 12</td>
       <td class="bigbold">1</td>
       <td>Corey Conners -2
 -2 thru 17</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td>Tyrrell Hatton +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 +1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
++2 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -354,26 +354,26 @@ E thru 12</td>
 -1 (F)</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Jon Rahm(W) +1
-+1 thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Viktor Hovland(W) E
 E thru 12</td>
       <td>Brooks Koepka E
 E thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 13</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
       <td class="greyout leftborder">Patrick Reed +3
 +3 thru 16</td>
       <td class="greyout">Luke List +5
@@ -381,13 +381,13 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Corey Conners -2
 -2 thru 17</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 12</td>
+      <td>Jon Rahm +2
++2 thru 13</td>
       <td>Jordan Spieth +2
 +2 thru 12</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
